--- a/linearmotion.html
+++ b/linearmotion.html
@@ -9,16 +9,42 @@
 	<body>
 	
 		<div style="width:160px;">
-		
-			<select id="dropdown">
-				<option>None</option>
+	
+			<select id="dropdown" onchange="swapObjects()" autocomplete="off">
+				<option>First object</option>
+				<option>Second object</option>
 			</select>
 			<div style="height:5px;"></div>
-			
-			<input id="name" class="" name="name" type="text" placeholder="Name of object" autocomplete="off"/> </br>
+
+			<label>Enable second?</label> 
+			<input id = "enableSecond" type="checkbox" autocomplete="off"></br>
 			<div style="height:5px;"></div>
 			
-			<button onclick="addNew()" type="button">Add new object</button>
+			<!-- FIRST OBJECT -->
+			<div id = "first">
+				<input id="u" class="" name="u" type="text" placeholder="Initial speed u" autocomplete="off"/> </br>
+				<div style="height:5px;" id="space1"></div>	
+			
+				<input id="a" class="" name="a" type="text" placeholder="Acceleration a" autocomplete="off"/> </br>
+				<div style="height:5px;" id="space2"></div>
+			
+				<input id="s" class="" name="s" type="text" placeholder="Initial position s" autocomplete="off"/> </br>
+				<div style="height:5px;" id="space3"></div>
+			</div>
+			
+			<!-- SECOND OBJECT -->
+			<div id = "second" style="display:none;">
+				<input id="u1" class="" name="u1" type="text" placeholder="Initial speed u" autocomplete="off"/> </br>
+				<div style="height:5px;"></div>	
+			
+				<input id="a1" class="" name="a1" type="text" placeholder="Acceleration a" autocomplete="off"> </br>
+				<div style="height:5px;"></div>
+			
+				<input id="s1" class="" name="s1" type="text" placeholder="Initial position s" autocomplete="off"/> </br>
+				<div style="height:5px;"></div>
+			</div>
+			
+			<button onclick="run()" type="button">Add new object</button>
 			<div style="height:5px;"></div>
 			
 		</div>
