Added index, changed styling

--- a/index.html
+++ b/index.html
@@ -1,2 +1,30 @@
 <html>
+<body>
+
+	<p style="text-decoration: underline; font-weight: bold;">
+	Links to simulators for each topic
+	</p>
+	
+	<ul>
+		<li>Vectors</li>
+		<li><a href="linearmotion.html">Linear motion (WIP)</a></li>
+		<li><a href="projectiles.html">Projectiles (WIP)</a></li>
+		<li>Connected particles</li>
+		<li>Circular motion</li>
+		<li>Simple harmonic motion</li>
+		<li>Relative velocity</li>
+	</ul>
+	
+	<p>
+	This aim of this project is to provide simulators to aid students 
+	in learning Leaving Certificate Applied Mathematics.
+	</br>
+	Students can select from a number of scenarios for each topic and adjust relevant parameters.
+	</br>
+	</br>
+	For the source code and more info, click 
+	<a href="https://github.com/MikeyRooney/Applied-Mathematics-Simulator">here.</a>
+	</p>
+
+</body>
 </html>
