--- a/linearmotion.html
+++ b/linearmotion.html
@@ -2,55 +2,62 @@
 
 <meta charset="UTF-8"> 
 
-	<script src="js/raphael.js"></script>
-	<script src="js/jquery-1.11.2.js"></script>
-	<script src="js/linearmotion.js"></script>
+<script src="js/raphael.js"></script>
+<script src="js/jquery-1.11.2.js"></script>
+<script src="js/linearmotion.js"></script>
 	
-	<body>
+<body>
 	
-		<div style="width:160px;">
+	<div style="width:160px;">
 	
-			<select id="dropdown" onchange="swapObjects()" autocomplete="off">
-				<option>First object</option>
-				<option>Second object</option>
-			</select>
-			<div style="height:5px;"></div>
-
-			<label>Enable second?</label> 
-			<input id = "enableSecond" type="checkbox" autocomplete="off"></br>
-			<div style="height:5px;"></div>
+		<!-- DROPDOWN MENU -->
+		<select id="dropdown" onchange="swapObjects()" autocomplete="off">
+			<option>First object</option>
+			<option>Second object</option>
+		</select>
+		<div style="height:5px;"></div>
 			
-			<!-- FIRST OBJECT -->
-			<div id = "first">
-				<input id="u" class="" name="u" type="text" placeholder="Initial speed u" autocomplete="off"/> </br>
-				<div style="height:5px;" id="space1"></div>	
+		<!-- FIRST OBJECT -->
+		<div id = "first">
+			<input id="u" type="text" placeholder="Initial speed (u)" autocomplete="off"/> </br>
+			<div style="height:5px;" id="space1"></div>	
 			
-				<input id="a" class="" name="a" type="text" placeholder="Acceleration a" autocomplete="off"/> </br>
-				<div style="height:5px;" id="space2"></div>
+			<input id="a" type="text" placeholder="Acceleration (a)" autocomplete="off"/> </br>
+			<div style="height:5px;" id="space2"></div>
 			
-				<input id="s" class="" name="s" type="text" placeholder="Initial position s" autocomplete="off"/> </br>
-				<div style="height:5px;" id="space3"></div>
-			</div>
-			
-			<!-- SECOND OBJECT -->
-			<div id = "second" style="display:none;">
-				<input id="u1" class="" name="u1" type="text" placeholder="Initial speed u" autocomplete="off"/> </br>
-				<div style="height:5px;"></div>	
-			
-				<input id="a1" class="" name="a1" type="text" placeholder="Acceleration a" autocomplete="off"> </br>
-				<div style="height:5px;"></div>
-			
-				<input id="s1" class="" name="s1" type="text" placeholder="Initial position s" autocomplete="off"/> </br>
-				<div style="height:5px;"></div>
-			</div>
-			
-			<button onclick="run()" type="button">Add new object</button>
-			<div style="height:5px;"></div>
-			
+			<input id="s" type="text" placeholder="Initial position (s)" autocomplete="off"/> </br>
+			<div style="height:5px;" id="space3"></div>
 		</div>
+			
+		<!-- SECOND OBJECT, HIDDEN BY DEFAULT -->
+		<div id = "second" style="display:none;">
+			<input id="u1" type="text" placeholder="Initial speed (u)" autocomplete="off"/> </br>
+			<div style="height:5px;"></div>	
+			
+			<input id="a1" type="text" placeholder="Acceleration (a)" autocomplete="off"> </br>
+			<div style="height:5px;"></div>
+			
+			<input id="s1" type="text" placeholder="Initial position (s)" autocomplete="off"/> </br>
+			<div style="height:5px;"></div>
+		</div>
+			
+		<!-- ENABLE BUTTON -->
+		<label>Enable second?</label> 
+		<input id = "enableSecond" type="checkbox" autocomplete="off"></br>
+		<div style="height:5px;"></div>
+			
+		<!-- RUN BUTTON -->
+		<button onclick="run()" type="button">Run simulation</button>
+		<div style="height:5px;"></div>
+			
+		<!-- CLEAR INPUT BUTTON -->
+		<button onclick="clearInput()" type="button">Clear input</button>
+		<div style="height:5px;"></div>
+			
+	</div>
 		
-		<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
+	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
 		
-	</body>
+</body>
 	
 </html>
