Updated index and readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<li>Connected particles</li>
 		<li>Circular motion</li>
 		<li>Simple harmonic motion</li>
-		<li>Relative velocity</li>
+		<li>Relative motion</li>
 	</ul>
 	
 	<p>
