Corrections to readme and index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+
+<meta charset="UTF-8"> 
+
 <body>
 
 	<p style="text-decoration: underline; font-weight: bold;">
@@ -6,13 +9,14 @@
 	</p>
 	
 	<ul>
-		<li>Vectors</li>
+		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
 		<li><a href="linearmotion.html">Linear motion (WIP)</a></li>
 		<li><a href="projectiles.html">Projectiles (WIP)</a></li>
-		<li>Connected particles</li>
-		<li>Circular motion</li>
-		<li>Simple harmonic motion</li>
-		<li>Relative motion</li>
+		<li><a href="connected.html">Connected particles (NOT DONE)</a></li>
+		<li><a href="circular.html">Circular motion (NOT DONE)</a></li>
+		<li><a href="shm.html">Simple harmonic motion (NOT DONE)</a></li>
+		<li><a href="relative.html">Relative velocity (NOT DONE)</a></li>
+		<li><a href="collisions.html">Collisions (NOT DONE)</a></li>
 	</ul>
 	
 	<p>
