--- a/projectiles.html
+++ b/projectiles.html
@@ -10,37 +10,46 @@
 	
 	<div style="width:160px;">
 			
-			
+		<!-- INITIAL SPEED FIELD -->
 		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
-			
+		
+		<!-- PROJECTILE ANGLE FIELD -->
 		<input id="angle" class="" name="angle" type="text" placeholder="Projectile angle α" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
+		<!-- SLOPED CHECK BOX -->
 		<label>Sloped?</label> 
 		<input id = "isSloped" type="checkbox" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
+		<!-- SLOPE ANGLE FIELD -->
 		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Slope angle ω" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
+		<!-- OFF GROUND CHECK BOX -->
 		<label>Off ground?</label> 
 		<input id = "offGround" type="checkbox" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
+		<!-- START HEIGHT FIELD -->
 		<input id="startHeight" class="" name="startHeight" type="text" placeholder="Starting height" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
+		<!-- RUN BUTTON -->
 		<button onclick="run()" type="button">Run simulation</button> </br>
 		<div style="height:5px;"></div>
 			
+		<!-- CLEAR BUTTON -->
 		<button onclick="clearInput()" type="button">Clear input</button>
 		<div style="height:5px;"></div>
 			
 	</div>
 		
+	<!-- space for the graphics panel -->
 	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
 		
+	<!-- real time info relevant to the simulation -->
 	<div id ="info_pane" style="position:fixed;left:770px;width:200px;top:0px;">
 		<div id="ux">ux:</div>
 		<div id="uy">uy:</div>
