--- a/linearmotion.html
+++ b/linearmotion.html
@@ -53,7 +53,7 @@
 			<div style="height:5px;"></div>
 			
 			<!-- TERMINATION SELECT -->
-			<select id="terminateSelect" onchange="swapObjects()" autocomplete="off">
+			<select id="terminateSelect" autocomplete="off">
 				<option>Time</option>
 				<option>Velocity</option>
 				<option>Displacement</option>
@@ -66,7 +66,7 @@
 				<div>of</div>
 				<div style="height:5px;"></div>
 				
-				<select id="terminateObjectSelect" onchange="swapObjects()" autocomplete="off">
+				<select id="terminateObjectSelect" autocomplete="off">
 					<option>First object</option>
 				</select>
 				<div style="height:5px;"></div>
