Almost have sloped projectiles working

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 	Students can select from a number of scenarios for each topic and adjust relevant parameters.
 	</br>
 	</br>
+	A browser that supports HTML5 and has JavaScript enabled is required to use these simulators.
+	</br>
+	Versions of Internet Explorer older than 10 are not supported. Tested with latest versions of FireFox and Chrome.
+	</br>
+	</br>
 	For the source code and more info, click 
 	<a href="https://github.com/MikeyRooney/Applied-Mathematics-Simulator">here.</a>
 	</p>
