--- a/linearmotion.html
+++ b/linearmotion.html
@@ -22,25 +22,25 @@
 			
 		<!-- FIRST OBJECT'S FIELDS -->
 		<div id = "first">
-			<input id="u" type="text" placeholder="Initial speed (u1)" autocomplete="off"/> </br>
+			<input id="u" type="text" placeholder="Initial speed (u1)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;" id="space1"></div>	
 			
-			<input id="a" type="text" placeholder="Acceleration (a1)" autocomplete="off"/> </br>
+			<input id="a" type="text" placeholder="Acceleration (a1)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;" id="space2"></div>
 			
-			<input id="s" type="text" placeholder="Initial position (s1)" autocomplete="off"/> </br>
+			<input id="s" type="text" placeholder="Initial position (s1)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;" id="space3"></div>
 		</div>
 			
 		<!-- SECOND OBJECT'S FIELDS, HIDDEN BY DEFAULT -->
 		<div id = "second" style="display:none;">
-			<input id="u1" type="text" placeholder="Initial speed (u2)" autocomplete="off"/> </br>
+			<input id="u1" type="text" placeholder="Initial speed (u2)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="a1" type="text" placeholder="Acceleration (a2)" autocomplete="off"> </br>
+			<input id="a1" type="text" placeholder="Acceleration (a2)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="s1" type="text" placeholder="Initial position (s2)" autocomplete="off"/> </br>
+			<input id="s1" type="text" placeholder="Initial position (s2)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 		</div>
 		
@@ -74,7 +74,7 @@
 				<div>is</div>
 				<div style="height:5px;"></div>
 			
-				<input id="terminateObjectValue" type="text" placeholder="Terminate value" autocomplete="off"/> </br>
+				<input id="terminateObjectValue" type="text" placeholder="Terminate value" style = "float:left;width:90%;" autocomplete="off"/> </br>
 				<div style="height:5px;"></div>
 					
 			</div>
@@ -85,7 +85,7 @@
 				<div>is</div>
 				<div style="height:5px;"></div>
 			
-				<input id="terminateTimeValue" type="text" placeholder="Terminate value" autocomplete="off"/> </br>
+				<input id="terminateTimeValue" type="text" placeholder="Terminate value" style = "float:left;width:90%;" autocomplete="off"/> </br>
 				<div style="height:5px;"></div>
 				
 			</div>
