--- a/projectiles.html
+++ b/projectiles.html
@@ -11,11 +11,11 @@
 	<div style="width:160px;">
 			
 		<!-- INITIAL SPEED FIELD -->
-		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" autocomplete="off"/> </br>
+		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<!-- PROJECTILE ANGLE FIELD -->
-		<input id="angle" class="" name="angle" type="text" placeholder="Projectile angle α" autocomplete="off"/> </br>
+		<input id="angle" class="" name="angle" type="text" placeholder="Projectile angle α" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
 		<!-- SLOPED CHECK BOX -->
@@ -24,7 +24,7 @@
 		<div style="height:5px;"></div>
 			
 		<!-- SLOPE ANGLE FIELD -->
-		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Slope angle ω" autocomplete="off"/> </br>
+		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Slope angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
 		<!-- OFF GROUND CHECK BOX -->
@@ -33,7 +33,7 @@
 		<div style="height:5px;"></div>
 			
 		<!-- START HEIGHT FIELD -->
-		<input id="startHeight" class="" name="startHeight" type="text" placeholder="Starting height" autocomplete="off"/> </br>
+		<input id="startHeight" class="" name="startHeight" type="text" placeholder="Starting height" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 			
 		<!-- RUN BUTTON -->
