Various small fixes and changes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
 	</br>
 	Students can select from a number of scenarios for each topic and adjust relevant parameters.
 	</br>
+	It has been tested with "sane" values that would usually be found in Applied Mathematics.
+	It is not guaranteed to perform well with large values.
+	</br>
 	</br>
 	A browser that supports HTML5 and has JavaScript enabled is required to use these simulators.
 	</br>
-	Versions of Internet Explorer older than 10 are not supported. Tested with latest versions of FireFox and Chrome.
+	Tested to work with the following browsers:
+	<ul>
+	<li>FireFox latest version</li>
+	<li>Chrome latest version</li>
+	<li>Internet Explorer 11 and later</li>
+	</ul>
+	Please click "Allow blocked content" to allow JavaScript if using Internet Explorer
 	</br>
 	</br>
 	For the source code and more info, click 
