--- a/linearmotion.html
+++ b/linearmotion.html
@@ -57,6 +57,7 @@
 				<option>Velocity</option>
 				<option>Displacement</option>
 				<option>Time</option>
+				<option>Objects are equal</option>
 			</select>
 			<div style="height:5px;"></div>
 			
