--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</p>
 	
 	<ul>
-		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
+		<li><a href="projectiles.html">Projectiles</a></li>
 		<li><a href="linearmotion.html">Linear motion (WIP)</a></li>
-		<li><a href="projectiles.html">Projectiles (WIP)</a></li>
+		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
 		<li><a href="connected.html">Connected particles (NOT DONE)</a></li>
 		<li><a href="circular.html">Circular motion (NOT DONE)</a></li>
 		<li><a href="shm.html">Simple harmonic motion (NOT DONE)</a></li>
