Progress on terminating conditions

--- a/projectiles.html
+++ b/projectiles.html
@@ -43,6 +43,10 @@
 		<!-- CLEAR BUTTON -->
 		<button onclick="clearInput()" type="button">Clear input</button>
 		<div style="height:5px;"></div>
+		
+		<!-- STOP BUTTON -->
+		<button onclick="stopSimulation()" type="button">Stop simulation</button>
+		<div style="height:5px;"></div>
 			
 	</div>
 		
