Fixes, progress on terminating conditions
Fixed some input verification issues, fixed flow control issues, made
progress on terminating when an attribute of both objects is equal

--- a/projectiles.html
+++ b/projectiles.html
@@ -17,25 +17,34 @@
 		<!-- PROJECTILE ANGLE FIELD -->
 		<input id="angle" class="" name="angle" type="text" placeholder="Projectile angle α" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
-			
+		
+		<hr style = "float:left; width:85%;">
+		</br>
+		
 		<!-- SLOPED CHECK BOX -->
-		<label>Sloped?</label> 
+		<label>Incline plane</label> 
 		<input id = "isSloped" type="checkbox" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
 		<!-- SLOPE ANGLE FIELD -->
-		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Slope angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
-			
+		
+		<hr style = "float:left; width:85%;">
+		</br>
+		
 		<!-- OFF GROUND CHECK BOX -->
-		<label>Off ground?</label> 
+		<label>Off ground</label> 
 		<input id = "offGround" type="checkbox" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
 		<!-- START HEIGHT FIELD -->
 		<input id="startHeight" class="" name="startHeight" type="text" placeholder="Starting height" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
-			
+		
+		<hr style = "float:left; width:85%;">
+		</br>
+		
 		<!-- RUN BUTTON -->
 		<button onclick="run()" type="button">Run simulation</button> </br>
 		<div style="height:5px;"></div>
