--- a/linearmotion.html
+++ b/linearmotion.html
@@ -128,17 +128,17 @@
 	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:200px;top:0px;">
-		<div id="iu1">u1:</div>
-		<div id="ia1">a1:</div>
-		<div id="is1">s1:</div>
-		<div id="v1">v1:</div>
+	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:0px;">
+		<div id="iu1">Initial speed u1:</div>
+		<div id="ia1">Initial acceleration a1:</div>
+		<div id="is1">Initial position s1:</div>
+		<div id="v1">Current velocity v1:</div>
+		<div id="cs1">Current position s1:</div>
 		<div id="ct">Current time:</div>
 		<div id="sf">End position:</div>
 		<div id="td">Total distance:</div>
 		<div id="tt">Total time:</div>
 		<div id="scale">Scale:</div>
-		<div id="circle">Circle x:</div>
 
 	</div>
 	
