Added placeholder library

--- a/projectiles.html
+++ b/projectiles.html
@@ -5,6 +5,7 @@
 <script src="js/raphael.js"></script>
 <script src="js/jquery-1.11.2.js"></script>
 <script src="js/projectiles.js"></script>
+<script src="js/placeholders.min.js"></script>
 	
 <body>
 	
