Basic version of catchup, clear input now works

--- a/linearmotion.html
+++ b/linearmotion.html
@@ -54,9 +54,9 @@
 		<!-- SHOWN WHEN "CATCHUP" IS SELECTED -->
 		<div id = "catch" style="display:none;">
 		
-			<!-- FIRST OBJECT -->
+			<!-- FIRST OBJECT 
 			<input id="catch-u1" type="text" placeholder="Initial speed u1 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
-			<div style="height:5px;"></div>	
+			<div style="height:5px;"></div>	-->
 			
 			<input id="catch-a1" type="text" placeholder="Acceleration a1 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
@@ -66,9 +66,9 @@
 			<div style="height:5px;"></div>	
 			
 			<input id="catch-a2" type="text" placeholder="Acceleration a2 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"> </br>
-			<div style="height:5px;"></div>
+			<div style="height:15px;"></div>
 			
-			<input id="catch-s2" type="text" placeholder="Initial position s2 (> 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="delay" type="text" placeholder="Delay x (> 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
