Bug fixes, added graph to catchup

--- a/linearmotion.html
+++ b/linearmotion.html
@@ -123,7 +123,7 @@
 		
 	</div>
 	
-	<div id="graphText" style="position:fixed;left:770px;width:250px;top:355px;"></div>
+	<div id="graphText" style="position:fixed;left:770px;width:250px;top:355px;">Velocity vs time</div>
 	<div id="graph_panel" style="position:fixed;left:770px;width:225px;height:225px;top:375px;">
 	</div>
 	
