--- a/projectiles.html
+++ b/projectiles.html
@@ -24,19 +24,20 @@
 		
 		<!-- SLOPED CHECK BOX -->
 		<label>Incline plane</label> 
-		<input id = "isSloped" type="checkbox" autocomplete="off"></br>
+		<input id = "isSloped" type="checkbox" onclick="slopeChecked()" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
 		<!-- SLOPE ANGLE FIELD -->
 		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
-		<hr style = "float:left; width:85%;">
-		</br>
+		<div style="height:5px;"></div>
+		<div>or</div>
+		<div style="height:5px;"></div>
 		
 		<!-- OFF GROUND CHECK BOX -->
 		<label>Off ground</label> 
-		<input id = "offGround" type="checkbox" autocomplete="off"></br>
+		<input id = "offGround" type="checkbox" onclick="offgroundChecked()" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
 		<!-- START HEIGHT FIELD -->
@@ -64,16 +65,16 @@
 	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:200px;top:0px;">
-		<div id="ux">ux:</div>
-		<div id="uy">uy:</div>
-		<div id="vx">vx:</div>
-		<div id="vy">vy:</div>
-		<div id="sx">sx:</div>
-		<div id="sy">sy:</div>
-		<div id="range">Range:</div>
-		<div id="height">Height:</div>
-		<div id="tof">TOF:</div>
+	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:0px;">
+		<div id="ux">Initial x velocity:</div>
+		<div id="uy">Initial y velocity:</div>
+		<div id="vx">Current x velocity:</div>
+		<div id="vy">Current y velocity:</div>
+		<div id="sx">Current x position:</div>
+		<div id="sy">Current y position:</div>
+		<div id="range">Max range:</div>
+		<div id="height">Max height:</div>
+		<div id="tof">Time of flight:</div>
 		<div id="scale">Scale:</div>
 	</div>
 		
