--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	</p>
 	
 	<ul>
+		<li><a href="linearmotion.html">Linear motion</a></li>
 		<li><a href="projectiles.html">Projectiles</a></li>
-		<li><a href="linearmotion.html">Linear motion (WIP)</a></li>
+		<!--
 		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
 		<li><a href="connected.html">Connected particles (NOT DONE)</a></li>
 		<li><a href="circular.html">Circular motion (NOT DONE)</a></li>
 		<li><a href="shm.html">Simple harmonic motion (NOT DONE)</a></li>
 		<li><a href="relative.html">Relative velocity (NOT DONE)</a></li>
 		<li><a href="collisions.html">Collisions (NOT DONE)</a></li>
+		-->
 	</ul>
 	
 	<p>
@@ -29,7 +31,7 @@
 	It is not guaranteed to perform well with large values.
 	</br>
 	</br>
-	A browser that supports HTML5 and has JavaScript enabled is required to use these simulators.
+	A browser that has JavaScript enabled is required to use these simulators.
 	</br>
 	Tested to work with the following browsers:
 	<ul>
