--- a/linearmotion.html
+++ b/linearmotion.html
@@ -1,15 +1,60 @@
 <html>
-
+<head>
 <meta charset="UTF-8"> 
 
 <script src="js/raphael.js"></script>
 <script src="js/jquery-1.11.2.js"></script>
 <script src="js/linearmotion.js"></script>
 <script src="js/placeholders.min.js"></script>
+
+
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+a:link, a:visited {
+    top:0px;
+    display: block;
+    width: 140px;
+    height:50px;
+    font-weight: medium;
+    color: #FFFFFF;
+    background-color: #585858;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 1px solid black;
+}
+
+a:hover, a:active {
+    background-color: #b2b2b2;
+}
+</style>
+
+</head>
 	
 <body>
+	<div style="width:100%;height: 60px;">
+		<ul>
+		<li><a href="linearmotion.html">Linear motion</a><li>
+		<li><a href="projectiles.html">Projectiles</a><li>
+		<li><a href="connected.html">Connected particles</a></li>
+		<li><a href="circular.html">Circular motion</a></li>
+		<li><a href="shm.html">Simple harmonic</a></li>
+		<li><a href="relative.html">Relative velocity</a></li>
+		<li><a href="collisions.html">Collisions</a></li>
+		</ul>
+	</div>
 	
-	<div style="width:165px;">
+	<div style="width:165px;top:60px;">
 		
 		<!-- DROPDOWN MENU -->
 		<div>Select problem type:</div>
@@ -90,10 +135,10 @@
 	</div>
 	
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
+	<div id="graphics_panel" style="position:fixed; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:0px;height:350px;">
+	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;height:350px;">
 		
 		<div style="text-decoration: underline;">
 		First object:
@@ -123,8 +168,8 @@
 		
 	</div>
 	
-	<div id="graphText" style="position:fixed;left:770px;width:250px;top:355px;">Velocity vs time</div>
-	<div id="graph_panel" style="position:fixed;left:770px;width:225px;height:225px;top:375px;">
+	<div id="graphText" style="position:fixed;left:770px;width:250px;top:425px;">Velocity vs time</div>
+	<div id="graph_panel" style="position:fixed;left:770px;width:225px;height:225px;top:445px;">
 	</div>
 	
 	
