--- a/projectiles.html
+++ b/projectiles.html
@@ -1,4 +1,5 @@
 <html>
+<head>
 
 <meta charset="UTF-8"> 
 
@@ -6,10 +7,53 @@
 <script src="js/jquery-1.11.2.js"></script>
 <script src="js/projectiles.js"></script>
 <script src="js/placeholders.min.js"></script>
-	
+
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+a:link, a:visited {
+    top:0px;
+    display: block;
+    width: 160px;
+    height:50px;
+    font-weight: medium;
+    color: #FFFFFF;
+    background-color: #585858;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    border: 1px solid black;
+}
+
+a:hover, a:active {
+    background-color: #b2b2b2;
+}
+</style>
+
+</head>	
 <body>
+	<div style="width:100%;height: 60px;">
+		<ul>
+		<li><a href="linearmotion.html">Linear motion</a><li>
+		<li><a href="projectiles.html">Projectiles</a><li>
+		<li><a href="connected.html">Connected particles</a></li>
+		<li><a href="circular.html">Circular motion</a></li>
+		<li><a href="shm.html">Simple harmonic motion</a></li>
+		<li><a href="relative.html">Relative velocity</a></li>
+		<li><a href="collisions.html">Collisions</a></li>
+		</ul>
+	</div>
 	
-	<div style="width:160px;">
+	<div style="width:165px; top:60px;">
 			
 		<!-- INITIAL SPEED FIELD -->
 		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:90%;" autocomplete="off"/> </br>
@@ -62,10 +106,10 @@
 	</div>
 		
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:fixed; left:160px;width:610px;"></div>
+	<div id="graphics_panel" style="position:fixed; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:0px;">
+	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;">
 		<div id="ux">Initial x velocity:</div>
 		<div id="uy">Initial y velocity:</div>
 		<div id="vx">Current x velocity:</div>
