Small changes and fixes

--- a/linearmotion.html
+++ b/linearmotion.html
@@ -42,7 +42,7 @@ a:hover, a:active {
 </head>
 	
 <body>
-	<div style="width:100%;height: 60px;">
+	<div style="width:100%;height: 60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a href="projectiles.html">Projectiles</a><li>
