--- a/projectiles.html
+++ b/projectiles.html
@@ -23,7 +23,7 @@ li {
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 160px;
+    width: 140px;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -41,7 +41,7 @@ a:hover, a:active {
 
 </head>	
 <body>
-	<div style="width:100%;height: 60px;">
+	<div style="width:100%;height: 60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a href="projectiles.html">Projectiles</a><li>
