--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<ul>
 		<li><a href="linearmotion.html">Linear motion</a></li>
 		<li><a href="projectiles.html">Projectiles</a></li>
+		<li><a href="relative.html">Relative velocity</a></li>
 		<!--
 		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
 		<li><a href="connected.html">Connected particles (NOT DONE)</a></li>
 		<li><a href="circular.html">Circular motion (NOT DONE)</a></li>
 		<li><a href="shm.html">Simple harmonic motion (NOT DONE)</a></li>
-		<li><a href="relative.html">Relative velocity (NOT DONE)</a></li>
+		
 		<li><a href="collisions.html">Collisions (NOT DONE)</a></li>
 		-->
 	</ul>
