--- a/projectiles.html
+++ b/projectiles.html
@@ -44,11 +44,11 @@ a:hover, a:active {
 	<div style="width:100%;height: 60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
-		<li><a href="projectiles.html">Projectiles</a><li>
+		<li><a style="color:black; background-color:#A0A0A0" href="projectiles.html">Projectiles</a><li>
+		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
 		<li><a href="circular.html">Circular motion</a></li>
-		<li><a href="shm.html">Simple harmonic motion</a></li>
-		<li><a href="relative.html">Relative velocity</a></li>
+		<li><a href="shm.html">Simple harmonic</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
 		</ul>
 	</div>
