Some progress on relative, small fixes to others

--- a/relative.html
+++ b/relative.html
@@ -71,23 +71,18 @@ a:hover, a:active {
 			
 		<!-- SHOWN WHEN "REACH GIVEN SPEED" IS SELECTED -->
 		<div id = "vabdiv">
-			<input id="vab-vi1" type="text" placeholder="A i velocity Vai" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="vab-vai" type="text" placeholder="A i velocity Vai" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="vab-vj1" type="text" placeholder="A j velocity Vaj" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="vab-vaj" type="text" placeholder="A j velocity Vaj" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
 			<div style="height:5px;"></div>
 			
-			<input id="vab-vi2" type="text" placeholder="B i velocity Vbi" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="vab-vbi" type="text" placeholder="B i velocity Vbi" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="vab-vj2" type="text" placeholder="B j velocity Vbj" style = "float:left;width:90%;" autocomplete="off"/> </br>
-			<div style="height:5px;"></div>
-			
-			<div style="height:5px;"></div>
-			
-			<input id="vab-t" type="text" placeholder="Run for t seconds (>0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="vab-vbj" type="text" placeholder="B j velocity Vbj" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
@@ -104,7 +99,7 @@ a:hover, a:active {
 			
 			<div style="height:5px;"></div>
 			
-			<input id="closest-bi" type="text" placeholder="B's j velocity (>0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="closest-bj" type="text" placeholder="B's j velocity (>0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<input id="closest-bs" type="text" placeholder="B's distance south (>0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
@@ -177,12 +172,7 @@ a:hover, a:active {
 		<div id="time">Time:</div>
 		<div id="scale">Scale:</div>
 		
-	</div>
-	
-	<div id="graphText" style="position:fixed;left:770px;width:250px;top:415px;">Velocity vs time</div>
-	<div id="graph_panel" style="position:fixed;left:770px;width:225px;height:225px;top:435px;">
-	</div>
-	
+	</div>	
 	
 </body>
 	
