Refactored incline plane code

--- a/projectiles.html
+++ b/projectiles.html
@@ -66,13 +66,13 @@ a:hover, a:active {
 		<hr style = "float:left; width:85%;">
 		</br>
 		
-		<!-- SLOPED CHECK BOX -->
+		<!-- INCLINE CHECK BOX -->
 		<label>Incline plane</label> 
-		<input id = "isSloped" type="checkbox" onclick="slopeChecked()" autocomplete="off"></br>
+		<input id = "isIncline" type="checkbox" onclick="inclineChecked()" autocomplete="off"></br>
 		<div style="height:5px;"></div>
 			
-		<!-- SLOPE ANGLE FIELD -->
-		<input id="slopeAngle" class="" name="slopeAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<!-- INCLINE ANGLE FIELD -->
+		<input id="inclineAngle" class="" name="inclineAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<div style="height:5px;"></div>
