Basic version of simple Vab works

--- a/relative.html
+++ b/relative.html
@@ -146,31 +146,11 @@ a:hover, a:active {
 	<!-- real time info relevant to the simulation -->
 	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;height:345px;">
 		
-		<div style="text-decoration: underline;">
-		First object:
+		<div id="vab-info">
+			<div id="va-value">Va:</div>
+			<div id="vb-value">Vb:</div>
+			<div id="vab-value">Vab:</div>
 		</div>
-		<div id="iu1">Initial speed:</div>
-		<div id="ia1">Initial acceleration:</div>
-		<div id="is1">Initial position:</div>
-		<div id="cv1">Current velocity:</div>
-		<div id="cs1">Current position:</div>
-		</br>
-		
-		<div style="text-decoration: underline;">
-		Second object:
-		</div>
-		<div id="iu2">Initial speed:</div>
-		<div id="ia2">Initial acceleration:</div>
-		<div id="is2">Initial position:</div>
-		<div id="cv2">Current velocity:</div>
-		<div id="cs2">Current position:</div>
-		</br>
-		
-		<div style="text-decoration: underline;">
-		Other info:
-		</div>
-		<div id="time">Time:</div>
-		<div id="scale">Scale:</div>
 		
 	</div>	
 	
