--- a/relative.html
+++ b/relative.html
@@ -69,7 +69,7 @@ a:hover, a:active {
 		<hr style = "float:left; width:85%;">
 		</br>
 			
-		<!-- SHOWN WHEN "REACH GIVEN SPEED" IS SELECTED -->
+		<!-- SHOWN WHEN "SIMPLE VAB" IS SELECTED -->
 		<div id = "vabdiv">
 			<input id="vab-vai" type="text" placeholder="A i velocity Vai" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
@@ -89,7 +89,7 @@ a:hover, a:active {
 			</br>
 		</div>
 		
-		<!-- SHOW WHEN "SLOW TO ZERO" IS SELECTED -->
+		<!-- SHOW WHEN "CLOSEST DISTANCE" IS SELECTED -->
 		<div id = "closestdiv" style="display:none;">
 			<input id="closest-ai" type="text" placeholder="A's i velocity (>0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
@@ -110,16 +110,19 @@ a:hover, a:active {
 			</br>
 		</div>
 			
-		<!-- SHOWN WHEN "CATCHUP" IS SELECTED -->
+		<!-- SHOWN WHEN "RIVER" IS SELECTED -->
 		<div id = "riverdiv" style="display:none;">
 			
 			<input id="river-vp" type="text" placeholder="Person's speed (>0)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="river-angle" type="text" placeholder="Starting angle  (90>Θ>0)" style = "float:left;width:90%;" autocomplete="off"> </br>
+			<input id="river-angle" type="text" placeholder="Starting angle  (90≥Θ>0)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
 			<input id="river-vr" type="text" placeholder="Speed of the current (>0)" style = "float:left;width:90%;" autocomplete="off"> </br>
+			<div style="height:5px;"></div>
+			
+			<input id="river-w" type="text" placeholder="Width of the river (>0)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
