Closest distance now scales

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</ul>
 	
 	<p>
-	This aim of this project is to provide simulators to aid students 
+	The aim of this project is to provide simulators to aid students 
 	in learning Leaving Certificate Applied Mathematics.
 	</br>
 	Students can select from a number of scenarios for each topic and adjust relevant parameters.
