--- a/linearmotion.html
+++ b/linearmotion.html
@@ -23,7 +23,7 @@ li {
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 140px;
+    width: 115px;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -51,6 +51,7 @@ a:hover, a:active {
 		<li><a href="circular.html">Circular motion</a></li>
 		<li><a href="shm.html">Simple harmonic</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
+		<li><a href="index.html">Index</a></li>
 		</ul>
 	</div>
 	
@@ -135,10 +136,10 @@ a:hover, a:active {
 	</div>
 	
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:fixed; left:160px;width:600px;top:70px;"></div>
+	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;height:345px;">
+	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;height:345px;">
 		
 		<div style="text-decoration: underline;">
 		First object:
@@ -168,8 +169,8 @@ a:hover, a:active {
 		
 	</div>
 	
-	<div id="graphText" style="position:fixed;left:770px;width:250px;top:415px;">Velocity vs time</div>
-	<div id="graph_panel" style="position:fixed;left:770px;width:225px;height:225px;top:435px;">
+	<div id="graphText" style="position:absolute;left:770px;width:250px;top:415px;">Velocity vs time</div>
+	<div id="graph_panel" style="position:absolute;left:770px;width:225px;height:225px;top:435px;">
 	</div>
 	
 	
