--- a/projectiles.html
+++ b/projectiles.html
@@ -23,7 +23,7 @@ li {
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 140px;
+    width: 120px;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -41,7 +41,7 @@ a:hover, a:active {
 
 </head>	
 <body>
-	<div style="width:100%;height: 60px;width:1024px;">
+	<div style="width:100%;height:60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a style="color:black; background-color:#A0A0A0" href="projectiles.html">Projectiles</a><li>
@@ -50,6 +50,7 @@ a:hover, a:active {
 		<li><a href="circular.html">Circular motion</a></li>
 		<li><a href="shm.html">Simple harmonic</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
+		<li><a href="index.html">Index</a></li>
 		</ul>
 	</div>
 	
@@ -106,10 +107,10 @@ a:hover, a:active {
 	</div>
 		
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:fixed; left:160px;width:600px;top:70px;"></div>
+	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;">
+	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;">
 		<div id="ux">Initial x velocity:</div>
 		<div id="uy">Initial y velocity:</div>
 		<div id="vx">Current x velocity:</div>
