--- a/relative.html
+++ b/relative.html
@@ -144,10 +144,10 @@ a:hover, a:active {
 	</div>
 	
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:fixed; left:160px;width:600px;top:70px;"></div>
+	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:fixed;left:770px;width:250px;top:65px;height:345px;">
+	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;height:345px;">
 		
 		<div id="vab-info">
 			<div id="va-value">Va:</div>
