--- a/circular.html
+++ b/circular.html
@@ -5,7 +5,7 @@
 
 <script src="js/raphael.js"></script>
 <script src="js/jquery-1.11.2.js"></script>
-<script src="js/shm.js"></script>
+<script src="js/circular.js"></script>
 <script src="js/placeholders.min.js"></script>
 
 <style>
@@ -49,8 +49,8 @@ a:hover, a:active {
 		<li><a href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
-		<li><a href="circular.html">Circular motion</a></li>
-		<li><a style="color:black; background-color:#A0A0A0" href="shm.html">Simple harmonic</a></li>
+		<li><a style="color:black; background-color:#585858;" href="circular.html">Circular motion</a></li>
+		<li><a href="shm.html">Simple harmonic</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
 		<li><a href="index.html">Index</a></li>
 		</ul>
@@ -71,15 +71,15 @@ a:hover, a:active {
 		<div style="height:10px;"></div>
 		
 		<select id="typeSelect" onchange="typeChange()" autocomplete="off">
-			<option id="pendulum">Pendulum</option>
-			<option id="spring">Spring</option>
+			<option id="horizontal">Horizontal</option>
+			<option id="vertical">Vertical</option>
 		</select>
 		<div style="height:5px;"></div>
 		<hr style = "float:left; width:85%;">
 		</br>
 		
-		<!-- CONSTANT A FIELD -->
-		<input id="constanta" class="" name="constanta" type="text" placeholder="Constant A" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<!-- RADIUS FIELD -->
+		<input id="radisu" class="" name="constanta" type="text" placeholder="Constant A" style = "float:left;width:90%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<!-- CONSTANT OMEGA FIELD -->
