--- a/linearmotion.html
+++ b/linearmotion.html
@@ -23,7 +23,7 @@ li {
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 115px;
+    width: 125px;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -42,9 +42,9 @@ a:hover, a:active {
 </head>
 	
 <body>
-	<div style="height: 60px;width:1024px;">
+	<div id="navbar" style="height: 60px;width:1024px;">
 		<ul>
-		<li><a style="color:black; background-color:#A0A0A0" href="linearmotion.html">Linear motion</a><li>
+		<li><a style="color:black; background-color:#585858" href="linearmotion.html">Linear motion</a><li>
 		<li><a href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
@@ -53,6 +53,15 @@ a:hover, a:active {
 		<li><a href="collisions.html">Collisions</a></li>
 		<li><a href="index.html">Index</a></li>
 		</ul>
+	</div>
+	
+	<div id="navselect" style="width:100%; height:55px;display:none;background-color:#A0A0A0;border: 1px solid black;">
+		<select id="navselectmenu" style="position:relative;height:35px;top:10px; left:5px;width:98%;">
+			<option>Linear Motion</option>
+			<option>Projectiles</option>
+			<option>Relative Velocity</option>
+			<option>Simple Harmonic</option>
+		</select>
 	</div>
 	
 	<div style="width:165px;top:60px;">
@@ -100,9 +109,7 @@ a:hover, a:active {
 		<!-- SHOWN WHEN "CATCHUP" IS SELECTED -->
 		<div id = "catch" style="display:none;">
 		
-			<!-- FIRST OBJECT 
-			<input id="catch-u1" type="text" placeholder="Initial speed u1 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
-			<div style="height:5px;"></div>	-->
+			<!-- FIRST OBJECT -->
 			
 			<input id="catch-a1" type="text" placeholder="Acceleration a1 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
@@ -131,6 +138,10 @@ a:hover, a:active {
 			
 		<!-- CLEAR INPUT BUTTON -->
 		<button onclick="clearInput()" type="button">Clear input</button>
+		<div style="height:5px;"></div>
+		
+		<!-- HELP BUTTON -->
+		<button onclick="showHelp()" type="button">Help</button>
 		<div style="height:5px;"></div>
 
 	</div>
