--- a/projectiles.html
+++ b/projectiles.html
@@ -23,7 +23,7 @@ li {
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 120px;
+    width: 125px;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -41,7 +41,7 @@ a:hover, a:active {
 
 </head>	
 <body>
-	<div style="width:100%;height:60px;width:1024px;">
+	<div id="navbar" style="width:100%;height:60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a style="color:black; background-color:#A0A0A0" href="projectiles.html">Projectiles</a><li>
@@ -52,6 +52,15 @@ a:hover, a:active {
 		<li><a href="collisions.html">Collisions</a></li>
 		<li><a href="index.html">Index</a></li>
 		</ul>
+	</div>
+	
+	<div id="navselect" style="width:100%; height:55px;display:none;background-color:#585858;border: 1px solid black;">
+		<select id="navselectmenu" style="position:relative;height:35px;top:10px; left:5px;width:98%;">
+			<option>Linear Motion</option>
+			<option>Projectiles</option>
+			<option>Relative Velocity</option>
+			<option>Simple Harmonic</option>
+		</select>
 	</div>
 	
 	<div style="width:165px; top:60px;">
@@ -102,6 +111,10 @@ a:hover, a:active {
 			
 		<!-- CLEAR BUTTON -->
 		<button onclick="clearInput()" type="button">Clear input</button>
+		<div style="height:5px;"></div>
+		
+		<!-- HELP BUTTON -->
+		<button onclick="showHelp()" type="button">Help</button>
 		<div style="height:5px;"></div>
 			
 	</div>
