Many small fixes

--- a/relative.html
+++ b/relative.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 <meta charset="UTF-8"> 
@@ -65,7 +67,7 @@ a:hover, a:active {
 		</select>
 	</div>
 	
-	<div style="width:165px;top:60px;">
+	<div style="position:absolute; width:165px;top:70px;">
 		
 		<!-- DROPDOWN MENU -->
 		<div>Select problem type:</div>
@@ -159,7 +161,7 @@ a:hover, a:active {
 	</div>
 	
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
+	<div id="graphics_panel" style="position:absolute; left:165px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
 	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;height:345px;">
