--- a/linearmotion.html
+++ b/linearmotion.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <meta charset="UTF-8"> 
@@ -44,7 +45,7 @@ a:hover, a:active {
 <body>
 	<div id="navbar" style="height: 60px;width:1024px;">
 		<ul>
-		<li><a style="color:black; background-color:#585858" href="linearmotion.html">Linear motion</a><li>
+		<li><a style="color:black; background-color:#A0A0A0" href="linearmotion.html">Linear motion</a><li>
 		<li><a href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
@@ -55,7 +56,7 @@ a:hover, a:active {
 		</ul>
 	</div>
 	
-	<div id="navselect" style="width:100%; height:55px;display:none;background-color:#A0A0A0;border: 1px solid black;">
+	<div id="navselect" style="width:100%; height:55px;display:none;background-color:#585858;border: 1px solid black;">
 		<select id="navselectmenu" style="position:relative;height:35px;top:10px; left:5px;width:98%;">
 			<option>Linear Motion</option>
 			<option>Projectiles</option>
@@ -64,7 +65,7 @@ a:hover, a:active {
 		</select>
 	</div>
 	
-	<div style="width:165px;top:60px;">
+	<div style="position:absolute; width:165px;top:70px;">
 		
 		<!-- DROPDOWN MENU -->
 		<div>Select problem type:</div>
@@ -150,7 +151,7 @@ a:hover, a:active {
 	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;height:345px;">
+	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:70px;height:345px;">
 		
 		<div style="text-decoration: underline;">
 		First object:
