--- a/projectiles.html
+++ b/projectiles.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
 
@@ -44,7 +46,7 @@ a:hover, a:active {
 	<div id="navbar" style="width:100%;height:60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
-		<li><a style="color:black; background-color:#A0A0A0" href="projectiles.html">Projectiles</a><li>
+		<li><a style="color:black; background-color:#A0A0A0;" href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
 		<li><a href="circular.html">Circular motion</a></li>
@@ -63,7 +65,7 @@ a:hover, a:active {
 		</select>
 	</div>
 	
-	<div style="width:165px; top:60px;">
+	<div style="position:absolute; width:165px; top:70px;">
 			
 		<!-- INITIAL SPEED FIELD -->
 		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:90%;" autocomplete="off"/> </br>
@@ -120,10 +122,10 @@ a:hover, a:active {
 	</div>
 		
 	<!-- space for the graphics panel -->
-	<div id="graphics_panel" style="position:absolute; left:160px;width:600px;top:70px;"></div>
+	<div id="graphics_panel" style="position:absolute; left:165px;width:600px;top:70px;"></div>
 		
 	<!-- real time info relevant to the simulation -->
-	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:65px;">
+	<div id ="info_pane" style="position:absolute;left:770px;width:250px;top:70px;">
 		<div id="ux">Initial x velocity:</div>
 		<div id="uy">Initial y velocity:</div>
 		<div id="vx">Current x velocity:</div>
