--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<li><a href="linearmotion.html">Linear Motion</a></li>
 		<li><a href="projectiles.html">Projectiles</a></li>
 		<li><a href="relative.html">Relative Velocity</a></li>
-		<li><a href="circular.html">Circular Motion</a></li>
-		<li><a href="shm.html">Simple Harmonic Motion</a></li>
+		<li><a href="circular-shm.html">Circular and Simple Harmonic Motion</a></li>
 		<!--
 		<li><a href="vectors.html">Vectors (NOT DONE)</a></li>
 		<li><a href="connected.html">Connected particles (NOT DONE)</a></li>
