--- a/linearmotion.html
+++ b/linearmotion.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -15,16 +16,18 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    width:100%;
 }
 
 li {
     float: left;
+    width: 14.285%;
 }
 
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 125px;
+    width: 100%;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -49,8 +52,7 @@ a:hover, a:active {
 		<li><a href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
-		<li><a href="circular.html">Circular motion</a></li>
-		<li><a href="shm.html">Simple harmonic</a></li>
+		<li><a href="circular-shm.html">Circular and SHM</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
 		<li><a href="index.html">Index</a></li>
 		</ul>
@@ -82,13 +84,13 @@ a:hover, a:active {
 			
 		<!-- SHOWN WHEN "REACH GIVEN SPEED" IS SELECTED -->
 		<div id = "reach">
-			<input id="reach-u1" type="text" placeholder="Initial speed u (≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="reach-u1" type="text" placeholder="Initial speed u (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="reach-a1" type="text" placeholder="Acceleration a (≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="reach-a1" type="text" placeholder="Acceleration a (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
-			<input id="reach-v1" type="text" placeholder="Final velocity v (> u ≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="reach-v1" type="text" placeholder="Final velocity v (> u ≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
@@ -97,10 +99,10 @@ a:hover, a:active {
 		
 		<!-- SHOW WHEN "SLOW TO ZERO" IS SELECTED -->
 		<div id = "slow" style="display:none;">
-			<input id="slow-u1" type="text" placeholder="Initial speed u (> 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="slow-u1" type="text" placeholder="Initial speed u (> 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="slow-a1" type="text" placeholder="Acceleration a (< 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="slow-a1" type="text" placeholder="Acceleration a (< 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 
 			<hr style = "float:left; width:85%;">
@@ -112,17 +114,17 @@ a:hover, a:active {
 		
 			<!-- FIRST OBJECT -->
 			
-			<input id="catch-a1" type="text" placeholder="Acceleration a1 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"> </br>
+			<input id="catch-a1" type="text" placeholder="Acceleration a1 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
 			
 			<!-- SECOND OBJECT -->
-			<input id="catch-u2" type="text" placeholder="Initial speed u2 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="catch-u2" type="text" placeholder="Initial speed u2 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>	
 			
-			<input id="catch-a2" type="text" placeholder="Acceleration a2 (≥ 0)" style = "float:left;width:90%;" autocomplete="off"> </br>
+			<input id="catch-a2" type="text" placeholder="Acceleration a2 (≥ 0)" style = "float:left;width:87.5%;" autocomplete="off"> </br>
 			<div style="height:15px;"></div>
 			
-			<input id="delay" type="text" placeholder="Delay x (> 0)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+			<input id="delay" type="text" placeholder="Delay x (> 0)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 			<div style="height:5px;"></div>
 			
 			<hr style = "float:left; width:85%;">
