--- a/projectiles.html
+++ b/projectiles.html
@@ -16,16 +16,19 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    width:100%;
 }
 
 li {
     float: left;
+    width: 14.285%;
+ 
 }
 
 a:link, a:visited {
     top:0px;
     display: block;
-    width: 125px;
+    width: 100%;
     height:50px;
     font-weight: medium;
     color: #FFFFFF;
@@ -43,14 +46,13 @@ a:hover, a:active {
 
 </head>	
 <body>
-	<div id="navbar" style="width:100%;height:60px;width:1024px;">
+	<div id="navbar" style="height:60px;width:1024px;">
 		<ul>
 		<li><a href="linearmotion.html">Linear motion</a><li>
 		<li><a style="color:black; background-color:#A0A0A0;" href="projectiles.html">Projectiles</a><li>
 		<li><a href="relative.html">Relative velocity</a></li>
 		<li><a href="connected.html">Connected particles</a></li>
-		<li><a href="circular.html">Circular motion</a></li>
-		<li><a href="shm.html">Simple harmonic</a></li>
+		<li><a href="circular-shm.html">Circular and SHM</a></li>
 		<li><a href="collisions.html">Collisions</a></li>
 		<li><a href="index.html">Index</a></li>
 		</ul>
@@ -68,11 +70,11 @@ a:hover, a:active {
 	<div style="position:absolute; width:165px; top:70px;">
 			
 		<!-- INITIAL SPEED FIELD -->
-		<input id="u" class="" name="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<input id="u" type="text" placeholder="Initial speed u (m/s)" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<!-- PROJECTILE ANGLE FIELD -->
-		<input id="angle" class="" name="angle" type="text" placeholder="Projectile angle α" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<input id="angle" type="text" placeholder="Projectile angle α" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<hr style = "float:left; width:85%;">
@@ -84,7 +86,7 @@ a:hover, a:active {
 		<div style="height:5px;"></div>
 			
 		<!-- INCLINE ANGLE FIELD -->
-		<input id="inclineAngle" class="" name="inclineAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<input id="inclineAngle" type="text" placeholder="Incline angle Θ" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<div style="height:5px;"></div>
@@ -97,7 +99,7 @@ a:hover, a:active {
 		<div style="height:5px;"></div>
 			
 		<!-- START HEIGHT FIELD -->
-		<input id="startHeight" class="" name="startHeight" type="text" placeholder="Starting height" style = "float:left;width:90%;" autocomplete="off"/> </br>
+		<input id="startHeight" type="text" placeholder="Starting height" style = "float:left;width:87.5%;" autocomplete="off"/> </br>
 		<div style="height:5px;"></div>
 		
 		<hr style = "float:left; width:85%;">
